# mem0_self_hosted_mcp

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  categorizer.py  docker-compose.yaml  env.sample  fastapi_main.py  fastmcp_main.py  main.py  pyproject.toml
